--- a/src/assets/style/App.css
+++ b/src/assets/style/App.css
@@ -6,6 +6,8 @@ header {
     justify-items: center;
     position: fixed;
     width: 100%;
+    z-index: 7;
+    box-sizing: border-box;
 }
 
 header h1 {
@@ -25,7 +27,9 @@ nav {
     border-bottom: 1px solid black;
     position: fixed;
     width: 100%;
-    top : 70px
+    top : 70px;
+    z-index: 7;
+    box-sizing: border-box;
 }
 
 nav ul {
@@ -42,16 +46,83 @@ nav ul li button {
 }
 
 main {
- padding: 140px 35px 35px 35px;
+ padding: 140px 0 0 0 ;
  box-sizing: border-box;
+ position: relative;
+ z-index: 0;
+
 }
 
 footer {
     border-top: 2px solid grey;
     padding: 10px;
     text-align: center;
-    position: fixed;
-    bottom: 0;
     width: 100%;
     background: white;
+    box-sizing: border-box;
+}
+
+.leaflet-control-zoom-in{
+    border-radius: 18px 18px 0 0 !important;
+    width : 29px !important;
+    height: 28px !important;
+}
+
+.leaflet-control-zoom-out{
+    border-radius: 0 0 18px 18px !important;
+    width : 29px !important;
+    height: 29px !important;
+}
+
+.leaflet-control-zoom{
+  border-radius: 18px;
+  box-shadow: 0px 1px 4px rgba(0,0,0,0.3) !important;
+  border: none !important;
+}
+
+.leaflet-top{
+  top : auto !important;
+  bottom: 10px
+}
+
+.leaflet-left{
+  left: auto !important;
+  right: 10px
+}
+
+.leaflet-container{
+    width: 100%;
+    height: 80vh;
+    z-index: 0
+  }
+  
+.leaflet-bottom{
+    display : none;
+}
+
+.question1{
+    display: flex;
+    flex-direction: column;
+}
+
+.question1 h1{
+    text-align: center;
+    margin: 50px 0;
+}
+
+.question1 pre{
+    width: 900px;
+    background-color: black;
+    color: white;
+    margin: auto;
+    padding: 20px;
+    border-radius: 30px;
+    margin-bottom: 50px;
+}
+
+.question1 img {
+    min-width: 70%;
+    max-width: 70%;
+    width: 70%;
+    margin: auto;
 }
